docs/v3.5.2/_sources/gallery/single/detector/HG01.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/detector/HG01.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_detector_HG01.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_detector_HG01.py:


Hermite-Gauss 01 Mode Detector
==============================

This example demonstrates the initialization and visualization of HG01 Mode detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-14

.. code-block:: Python

    from PyMieSim.single.detector import CoherentMode
    from PyMieSim.units import AU, degree
    from PyMieSim.single import plot_system








.. GENERATED FROM PYTHON SOURCE LINES 15-16

Initializing the detector

.. GENERATED FROM PYTHON SOURCE LINES 16-24

.. code-block:: Python

    detector = CoherentMode(
        mode_number="HG01",  # Specifying LP01 mode
        sampling=500 * AU,  # Number of sampling points
        NA=0.5 * AU,  # Numerical Aperture
        gamma_offset=0 * degree,  # Gamma offset
        phi_offset=40 * degree,  # Phi offset in degrees
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    WARNING:root:High values of NA: 0.5 do not comply with the paraxial approximation. Values under 0.3 are preferred.




.. GENERATED FROM PYTHON SOURCE LINES 25-26

Plotting the detector

.. GENERATED FROM PYTHON SOURCE LINES 26-27

.. code-block:: Python

    plot_system(detector)



.. image-sg:: /gallery/single/detector/images/sphx_glr_HG01_001.png
   :alt: HG01
   :srcset: /gallery/single/detector/images/sphx_glr_HG01_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.562 seconds)


.. _sphx_glr_download_gallery_single_detector_HG01.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: HG01.ipynb <HG01.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: HG01.py <HG01.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: HG01.zip <HG01.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
